# musical-guacamole

./: .env.example  .gitattributes  .gitignore  README.md  aemet_cache.db  pyproject.toml  vercel.json
antarctic_analytics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
antartica_analytics.egg-info/: PKG-INFO  SOURCES.txt
api/: index.py
app/: aemet_client.py  main.py  models.py  service.py
docs/: aemet_feature_expansion_endpoints.md  aemet_opendata_endpoints.md  aemet_opendata_map.md  aemet_opendata_priority_subset.md  antarctic_api_positioning.md  api_contract.md  feasibility_framework.md  implementation_backlog.md
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/: app.ts  config.html  config.ts  index.html  login.ts
frontend/src/components/: render.ts
frontend/src/core/: api.ts  dom.ts  logger.ts  navigation.ts  settings.ts  types.ts
frontend/src/features/: overlay.ts  playback.ts  timeframes.ts  timeframes_comparison.ts  timeframes_summary.ts  wind_rose.ts
frontend/src/pages/: index.html  login.html
frontend/src/styles/: style.css
musical_guacamole.egg-info/: PKG-INFO  SOURCES.txt
scripts/: build_frontend.sh  setup.sh  start.sh  up_local.sh  upload_blob.py  vercel_build.sh
src/: vercel.json
src/api/: index.py
src/app/: __init__.py  main.py
src/app/api/: __init__.py  dependencies.py  route_utils.py
src/app/core/: __init__.py  auth.py  config.py  exceptions.py  logging.py
src/app/models/: __init__.py  (+4 more)
src/scripts/: vercel_build.sh
tests/: test_aemet_client.py  test_api.py  test_route_utils.py  test_service.py
(+64 files in other folders)
